Convert all dconf settings to use local task

--- a/tasks/config/background.yml
+++ b/tasks/config/background.yml
@@ -1,35 +1,36 @@
-- name: "Configure desktop background settings"
-  block:
-    - name: "For desktop background, set bg image to '{{ background_image_path }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/background/picture-filename"
-        value: "'{{ background_image_path }}'"
-        state: present
-    - name: "For desktop background, set bg image opacity to {{ background_image_opacity }}"
-      community.general.dconf:
-        key: "/org/mate/desktop/background/picture-opacity"
-        value: "{{ background_image_opacity }}"
-        state: present
-    - name: "For desktop background, set bg image coverage to '{{ background_image_coverage }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/background/picture-options"
-        value: "'{{ background_image_coverage }}'"
-        state: present
-    - name: "For desktop background, set bg primary color to '{{ background_primary_color }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/background/primary-color"
-        value: "'{{ background_primary_color }}'"
-        state: present
-    - name: "For desktop background, set bg secondary color to '{{ background_secondary_color }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/background/secondary-color"
-        value: "'{{ background_secondary_color }}'"
-        state: present
-    - name: "For desktop background, set bg colors transition to '{{ background_colors_transition }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/background/color-shading-type"
-        value: "'{{ background_colors_transition }}'"
-        state: present
-  become: true
-  become_user: "{{ user_name }}"
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For desktop background, set bg image to '{{ background_image_path }}'"
+    key: "/org/mate/desktop/background/picture-filename"
+    value: "'{{ background_image_path }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For desktop background, set bg image opacity to {{ background_image_opacity }}"
+    key: "/org/mate/desktop/background/picture-opacity"
+    value: "{{ background_image_opacity }}"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For desktop background, set bg image coverage to '{{ background_image_coverage }}'"
+    key: "/org/mate/desktop/background/picture-options"
+    value: "'{{ background_image_coverage }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For desktop background, set bg primary color to '{{ background_primary_color }}'"
+    key: "/org/mate/desktop/background/primary-color"
+    value: "'{{ background_primary_color }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For desktop background, set bg secondary color to '{{ background_secondary_color }}'"
+    key: "/org/mate/desktop/background/secondary-color"
+    value: "'{{ background_secondary_color }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For desktop background, set bg colors transition to '{{ background_colors_transition }}'"
+    key: "/org/mate/desktop/background/color-shading-type"
+    value: "'{{ background_colors_transition }}'"
 
