--- a/tasks/config/icons.yml
+++ b/tasks/config/icons.yml
@@ -1,29 +1,26 @@
-- name: "Configure icons settings"
-  block:
-    - name: "For icons, set main icon theme to '{{ icons_main_theme }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/interface/icon-theme"
-        value: "'{{ icons_main_theme }}'"
-        state: present
-    - name: "For icons, set file-view to '{{ icons_for_file_view }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/file-views/icon-theme"
-        value: "'{{ icons_for_file_view }}'"
-        state: present
-    - name: "For icons, set icons-on-buttons to '{{ have_icons }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/interface/buttons-have-icons"
-        value: "{{ have_icons }}"
-        state: present
-      vars:
-        have_icons: "{{ 'true' if icons_on_buttons else 'false' }}"
-    - name: "For icons, set icons-in-menus to '{{ have_icons }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/interface/menus-have-icons"
-        value: "{{ have_icons }}"
-        state: present
-      vars:
-        have_icons: "{{ 'true' if icons_in_menus else 'false' }}"
-  become: true
-  become_user: "{{ user_name }}"
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For icons, set main icon theme to '{{ icons_main_theme }}'"
+    key: "/org/mate/desktop/interface/icon-theme"
+    value: "'{{ icons_main_theme }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For icons, set file-view to '{{ icons_for_file_view }}'"
+    key: "/org/mate/desktop/file-views/icon-theme"
+    value: "'{{ icons_for_file_view }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For icons, set icons-on-buttons to '{{ have_icons }}'"
+    key: "/org/mate/desktop/interface/buttons-have-icons"
+    value: "{{ have_icons }}"
+    have_icons: "{{ 'true' if icons_on_buttons else 'false' }}"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For icons, set icons-in-menus to '{{ have_icons }}'"
+    key: "/org/mate/desktop/interface/menus-have-icons"
+    value: "{{ have_icons }}"
+    have_icons: "{{ 'true' if icons_in_menus else 'false' }}"
 
