--- a/tasks/config/theme.yml
+++ b/tasks/config/theme.yml
@@ -1,20 +1,18 @@
-- name: "Configure theme, style, and colors settings"
-  block:
-    - name: "For theme, set main WM theme to '{{ theme_for_windows }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/interface/gtk-theme"
-        value: "'{{ theme_for_windows }}'"
-        state: present
-    - name: "For theme, set WM border/title-bar theme to '{{ theme_for_borders }}'"
-      community.general.dconf:
-        key: "/org/mate/marco/general/theme"
-        value: "'{{ theme_for_borders }}'"
-        state: present
-    - name: "For theme, set pop-up notification theme to '{{ theme_for_notifications }}'"
-      community.general.dconf:
-        key: "/org/mate/notification-daemon/theme"
-        value: "'{{ theme_for_notifications }}'"
-        state: present
-  become: true
-  become_user: "{{ user_name }}"
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For theme, set main WM theme to '{{ theme_for_windows }}'"
+    key: "/org/mate/desktop/interface/gtk-theme"
+    value: "'{{ theme_for_windows }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For theme, set WM border/title-bar theme to '{{ theme_for_borders }}'"
+    key: "/org/mate/marco/general/theme"
+    value: "'{{ theme_for_borders }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For theme, set pop-up notification theme to '{{ theme_for_notifications }}'"
+    key: "/org/mate/notification-daemon/theme"
+    value: "'{{ theme_for_notifications }}'"
 
