--- a/tasks/config/fonts.yml
+++ b/tasks/config/fonts.yml
@@ -1,30 +1,30 @@
-- name: "Configure fonts settings"
-  block:
-    - name: "For fonts, set window-title font to '{{ font_for_window_titles }}'"
-      community.general.dconf:
-        key: "/org/mate/marco/general/titlebar-font"
-        value: "'{{ font_for_window_titles }}'"
-        state: present
-    - name: "For fonts, set desktop-background font to '{{ font_for_desktop_background }}'"
-      community.general.dconf:
-        key: "/org/mate/caja/desktop/font"
-        value: "'{{ font_for_desktop_background }}'"
-        state: present
-    - name: "For fonts, set main application font to '{{ font_for_apps }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/interface/font-name"
-        value: "'{{ font_for_apps }}'"
-        state: present
-    - name: "For fonts, set document/user-input font to '{{ font_for_docs }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/interface/document-font-name"
-        value: "'{{ font_for_docs }}'"
-        state: present
-    - name: "For fonts, set monospace font to '{{ font_for_monospace }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/interface/monospace-font-name"
-        value: "'{{ font_for_monospace }}'"
-        state: present
-  become: true
-  become_user: "{{ user_name }}"
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For fonts, set window-title font to '{{ font_for_window_titles }}'"
+    key: "/org/mate/marco/general/titlebar-font"
+    value: "'{{ font_for_window_titles }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For fonts, set desktop-background font to '{{ font_for_desktop_background }}'"
+    key: "/org/mate/caja/desktop/font"
+    value: "'{{ font_for_desktop_background }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For fonts, set main application font to '{{ font_for_apps }}'"
+    key: "/org/mate/desktop/interface/font-name"
+    value: "'{{ font_for_apps }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For fonts, set document/user-input font to '{{ font_for_docs }}'"
+    key: "/org/mate/desktop/interface/document-font-name"
+    value: "'{{ font_for_docs }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For fonts, set monospace font to '{{ font_for_monospace }}'"
+    key: "/org/mate/desktop/interface/monospace-font-name"
+    value: "'{{ font_for_monospace }}'"
 
