--- a/tasks/config/mouse.yml
+++ b/tasks/config/mouse.yml
@@ -1,20 +1,18 @@
-- name: "Configure mouse pointer settings"
-  block:
-    - name: "For mouse, set pointer-theme to '{{ mouse_pointer_theme }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/peripherals/mouse/cursor-theme"
-        value: "'{{ mouse_pointer_theme }}'"
-        state: present
-    - name: "For mouse, set pointer-size to {{ mouse_pointer_size }}"
-      community.general.dconf:
-        key: "/org/mate/desktop/peripherals/mouse/cursor-size"
-        value: "{{ mouse_pointer_size }}"
-        state: present
-    - name: "For mouse, set double-click-threshold-time to {{ mouse_double_click_time }} millisec"
-      community.general.dconf:
-        key: "/org/mate/desktop/peripherals/mouse/double-click"
-        value: "{{ mouse_double_click_time }}"
-        state: present
-  become: true
-  become_user: "{{ user_name }}"
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For mouse, set pointer-theme to '{{ mouse_pointer_theme }}'"
+    key: "/org/mate/desktop/peripherals/mouse/cursor-theme"
+    value: "'{{ mouse_pointer_theme }}'"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For mouse, set pointer-size to {{ mouse_pointer_size }}"
+    key: "/org/mate/desktop/peripherals/mouse/cursor-size"
+    value: "{{ mouse_pointer_size }}"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For mouse, set double-click-threshold-time to {{ mouse_double_click_time }} millisec"
+    key: "/org/mate/desktop/peripherals/mouse/double-click"
+    value: "{{ mouse_double_click_time }}"
 
