--- a/tasks/config/panels_bottom.yml
+++ b/tasks/config/panels_bottom.yml
@@ -1,27 +1,27 @@
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
-    task_descrip: "For bottom panel, remove the '{{ wksp_item }}' panel item"
+    descrip: "For bottom panel, remove the '{{ wksp_item }}' panel item"
     key: "/org/mate/panel/objects/{{ wksp_item }}/toplevel-id"
     value: "''"
     wksp_item: "workspace-switcher"
 
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
-    task_descrip: "For bottom panel, set panel-size to {{ size }}"
+    descrip: "For bottom panel, set panel-size to {{ size }}"
     key: "/org/mate/panel/toplevels/bottom/size"
     value: "{{ size }}"
     size: "{{ bottom_panel_size }}"
 
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
-    task_descrip: "For bottom panel, set background-type to '{{ bg_type }}'"
+    descrip: "For bottom panel, set background-type to '{{ bg_type }}'"
     key: "/org/mate/panel/toplevels/bottom/background/type"
     value: "'{{ bg_type }}'"
     bg_type: "color"
 
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
-    task_descrip: "For bottom panel, set background-color to '{{ panels_background_color }}'"
+    descrip: "For bottom panel, set background-color to '{{ panels_background_color }}'"
     key: "/org/mate/panel/toplevels/bottom/background/color"
     value: "'{{ panels_background_color }}'"
 
