--- a/tasks/config/sound.yml
+++ b/tasks/config/sound.yml
@@ -1,26 +1,21 @@
-- name: "Configure sound settings"
-  block:
-  - name: "For sound, set input-feedback-sounds to '{{ use_input }}'"
-    community.general.dconf:
-      key: "/org/mate/desktop/sound/input-feedback-sounds"
-      value: "{{ use_input }}"
-      state: present
-    vars:
-      use_input: "{{ 'true' if enable_input_sounds else 'false' }}"
-  - name: "For sound, set event-sounds to '{{ use_sounds }}'"
-    community.general.dconf:
-      key: "/org/mate/desktop/sound/event-sounds"
-      value: "{{ use_sounds }}"
-      state: present
-    vars:
-      use_sounds: "{{ 'false' if (sound_theme == 'none') else 'true' }}"
-  - name: "For sound, set theme-name to '{{ theme_name }}'"
-    community.general.dconf:
-      key: "/org/mate/desktop/sound/theme-name"
-      value: "'{{ theme_name }}'"
-      state: present
-    vars:
-      theme_name: "{{ '__no_sounds' if (sound_theme == 'none') else sound_theme }}"
-  become: true
-  become_user: "{{ user_name }}"
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For sound, set input-feedback-sounds to '{{ use_input }}'"
+    key: "/org/mate/desktop/sound/input-feedback-sounds"
+    value: "{{ use_input }}"
+    use_input: "{{ 'true' if enable_input_sounds else 'false' }}"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For sound, set event-sounds to '{{ use_sounds }}'"
+    key: "/org/mate/desktop/sound/event-sounds"
+    value: "{{ use_sounds }}"
+    use_sounds: "{{ 'false' if (sound_theme == 'none') else 'true' }}"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For sound, set theme-name to '{{ theme_name }}'"
+    key: "/org/mate/desktop/sound/theme-name"
+    value: "'{{ theme_name }}'"
+    theme_name: "{{ '__no_sounds' if (sound_theme == 'none') else sound_theme }}"
 
