--- a/tasks/config/windowing.yml
+++ b/tasks/config/windowing.yml
@@ -1,19 +1,14 @@
-- name: "Configure windowing settings"
-  block:
-    - name: "For windowing actions, set draw-animations to '{{ use_animations }}'"
-      community.general.dconf:
-        key: "/org/mate/desktop/interface/enable-animations"
-        value: "{{ use_animations }}"
-        state: present
-      vars:
-        use_animations: "{{ 'true' if windowing_animations else 'false' }}"
-    - name: "For windowing, set num-workspaces to {{ num_wkspc }}"
-      community.general.dconf:
-        key: "/org/mate/marco/general/num-workspaces"
-        value: "{{ num_wkspc }}"
-        state: present
-      vars:
-        num_wkspc: "{{ windowing_num_workspaces }}"
-  become: true
-  become_user: "{{ user_name }}"
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For windowing actions, set draw-animations to '{{ use_animations }}'"
+    key: "/org/mate/desktop/interface/enable-animations"
+    value: "{{ use_animations }}"
+    use_animations: "{{ 'true' if windowing_animations else 'false' }}"
+
+- ansible.builtin.include_tasks: func/dconf.yml
+  vars:
+    descrip: "For windowing, set num-workspaces to {{ num_wkspc }}"
+    key: "/org/mate/marco/general/num-workspaces"
+    value: "{{ num_wkspc }}"
+    num_wkspc: "{{ windowing_num_workspaces }}"
 
