Factor out mate-panel-restart to separate file

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,13 +1,3 @@
-- name: "Restart mate-panel, if the process is running"
-  block:
-    - name: "Search for mate-panel PID"
-      community.general.pids:
-        name: mate-panel
-      register: mate_panel_pids
-    - name: "Restart mate-panel executable"
-      ansible.builtin.command: mate-panel --replace &
-      become: true
-      become_user: "{{ user_name }}"
-      when: (mate_panel_pids | length) > 0
+- ansible.builtin.include_tasks: restart_mate_panel.yml
   listen: restart-mate-panel
 
