--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,3 @@
-- ansible.builtin.include_tasks: restart_mate_panel.yml
+- ansible.builtin.include_tasks: func/restart_mate_panel.yml
   listen: restart-mate-panel
 
