Block vars for task names don't work - revert

--- a/tasks/func/restart_mate_panel.yml
+++ b/tasks/func/restart_mate_panel.yml
@@ -1,10 +1,10 @@
 - name: "Restart {{ panel_proc_name }}, if the process is running"
   block:
-    - name: "Search for '{{ panel_proc_name }}' PID"
+    - name: "Search for mate-panel PID"
       community.general.pids:
         name: "{{ panel_proc_name }}"
       register: mate_panel_pids
-    - name: "Restart '{{ panel_proc_name }}' executable"
+    - name: "Restart mate-panel executable"
       ansible.builtin.command: pkill '{{ panel_proc_name }}'
       when: (mate_panel_pids | length) > 0
   vars:
