Uninstall mate-user-guide (part of mate pkg group)

--- a/tasks/install/archlinux/install_base_pkgs.yml
+++ b/tasks/install/archlinux/install_base_pkgs.yml
@@ -5,11 +5,11 @@
   become: true
   become_user: root
 
-- name: "Install base 'mate' package-group"
+- name: "Remove 'mate-user-guide' package (part of 'mate' package-group)"
   community.general.pacman:
-    name: mate
-    state: present
-    extra_args: --needed
+    name: mate-user-guide
+    state: removed
+    extra_args: --recursive --nosave
   become: true
   become_user: root
 
