Add back missing mate pkg group install

--- a/tasks/install/archlinux/install_base_pkgs.yml
+++ b/tasks/install/archlinux/install_base_pkgs.yml
@@ -5,6 +5,14 @@
   become: true
   become_user: root
 
+- name: "Install base 'mate' package-group"
+   community.general.pacman:
+     name: mate
+     state: present
+     extra_args: --needed
+   become: true
+   become_user: root
+
 - name: "Remove 'mate-user-guide' package (part of 'mate' package-group)"
   community.general.pacman:
     name: mate-user-guide
