Add control_center task to remove 'Common Tasks'

--- a/tasks/config/main.yml
+++ b/tasks/config/main.yml
@@ -24,5 +24,7 @@
 
 - ansible.builtin.include_tasks: menu.yml
 
+- ansible.builtin.include_tasks: control_center.yml
+
 - ansible.builtin.include_tasks: mate_terminal.yml
 
