control_center: try quoting empty list setting

--- a/tasks/config/control_center.yml
+++ b/tasks/config/control_center.yml
@@ -2,5 +2,5 @@
   vars:
     descrip: "For control center, remove the 'Common Tasks' section in sidebar"
     key: "/org/mate/control-center/cc-actions-list"
-    value: []
+    value: "[]"
 
