--- a/tasks/config/control_center.yml
+++ b/tasks/config/control_center.yml
@@ -1,6 +1,5 @@
-- ansible.builtin.include_tasks: func/dconf.yml
+- ansible.builtin.include_tasks: func/dconf_empty_list.yml
   vars:
     descrip: "For control center, remove the 'Common Tasks' section in sidebar"
     key: "/org/mate/control-center/cc-actions-list"
-    value: "[]"
 
