--- a/tasks/func/dconf_empty_list.yml
+++ b/tasks/func/dconf_empty_list.yml
@@ -4,14 +4,14 @@
       community.general.dconf:
         key: "{{ key }}"
         # value: "{{ empty_list | string }}"
-        value: "[]"
+        value: "@as []"
         state: present
   rescue:
     - name: "SECOND TRY - {{ descrip }}"
       community.general.dconf:
         key: "{{ key }}"
         # value: "{{ empty_list | string }}"
-        value: "[]"
+        value: "@as []"
         state: present
   # vars:
   #   empty_list: ['Change Theme;mate-appearance-properties.desktop']
